src/test/ui/generics/single-colon-path-not-const-generics.stderr
error: expected one of `,` or `>`, found `:`
  --> $DIR/single-colon-path-not-const-generics.rs:8:18
   |
LL |   a: Vec<foo::bar:A>,
   |                  ^
   |                  |
   |                  expected one of `,` or `>`
   |                  help: you might have meant to write a path: `::`

error: aborting due to previous error

